data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1302.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\95\80\80\80\00\01\03\65\6e\76\0d\65\78"
    "\74\65\72\6e\61\6c\5f\66\75\6e\63\00\00\03\82\80"
    "\80\80\00\01\00\07\90\80\80\80\00\01\0c\6c\6f\6f"
    "\70\5f\77\69\74\68\5f\62\72\00\01\0a\8f\80\80\80"
    "\00\01\89\80\80\80\00\00\03\40\10\00\0c\00\0b\0b"
  )
""
)